--- a/HackAThon/app/src/main/res/values/strings.xml
+++ b/HackAThon/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HackAThon</string>
     <string name="title_activity_maps">Map</string>
+    <string name="string_logo">/@string logo</string>
 </resources>
