--- a/HackAThon/app/src/main/res/values/strings.xml
+++ b/HackAThon/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="string_logo">/@string logo</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_maps2">Map</string>
 </resources>
