--- a/HackAThon/app/src/main/res/values/strings.xml
+++ b/HackAThon/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HackAThon</string>
     <string name="title_activity_maps">Map</string>
     <string name="string_logo">/@string logo</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
 </resources>
